--- a/plugins/GeoIp2/lang/it.json
+++ b/plugins/GeoIp2/lang/it.json
@@ -23,17 +23,25 @@
         "GeoLiteCityLink": "Se stai usando il database dbip city lite, usa questo link: %1$s%2$s%3$s",
         "HowToSetupGeoIP": "Come impostare una geolocalizzazione accurata con dbip",
         "HowToSetupGeoIP_Step1": "%1$sScarica%2$s il database DBIP City Lite da %3$sdbip%4$s.",
+        "HowToSetupGeoIP_Step2": "Estrai questo file e copia il risultato, %1$snella sottodirectory %2$smisc%3$s di Matomo e rinominalo come %4$s (puoi farlo sia da FTP che da SSH).",
+        "HowToSetupGeoIP_Step3": "Ricarica questa schermata. Il provider %1$sDBIP \/ GeoIP (PHP)%2$s verrà pra %3$sinstallato%4$s. Selezionalo.",
+        "HowToSetupGeoIP_Step4": "E hai finito! Hai appena impostato Matomo per utilizzare DBIP, il che significa che sarai in grado di vedere le regioni e le città dei tuoi visitatori insieme a informazioni sul paese molto accurate.",
         "HowToSetupGeoIPIntro": "Sembra che tu non abbia una configurazione di Geolocalizzazione accurata. Questa è una funzionalità utile, e senza di essa non si avranno informazioni accurate e complete sulla localizzazione dei tuoi visitatori. Ecco come puoi iniziare a usarla rapidamente:",
         "HowToInstallApacheModule": "Come posso installare il modulo GeoIP per Apache?",
         "HowToInstallNginxModule": "Come posso installare il modulo GeoIP per Nginx?",
         "HttpServerModule": "Modulo Server HTTP",
         "InvalidGeoIPUpdatePeriod": "Periodo non valido per l'updater GeoIP: %1$s. I valori validi sono: %2$s.",
+        "IPurchasedGeoIPDBs": "Ho acquistato database molto accurati da %3$sdbip%4$s o %1$sMaxMind%2$s e voglio impostare gli aggiornamenti automatici.",
         "ISPDatabase": "Database ISP",
+        "IWantToDownloadFreeGeoIP": "Voglio scaricare il database gratuito DBIP...",
+        "PluginDescription": "Fornisce provider di localizzazione DBIP \/ GeoIP2.",
         "LocationDatabase": "Database Località",
         "LocationDatabaseHint": "Un database località è un database di nazioni, regioni o città.",
+        "LocationProviderDesc_Php": "Questo provider di localizzazione è il più semplice da installare in quanto non richiede la configurazione del server (ideale per l'hosting condiviso!). Utilizza un database DBIP o GeoIP 2 e l'API PHP di MaxMind per determinare con precisione la posizione dei visitatori.",
         "LocationProviderDesc_Php_WithExtension": "Questo provider di posizione viene velocizzato dall'estensione installata %1$smaxminddb%2$s.",
         "LocationProviderDesc_ServerModule": "Questo provider di posizione utilizza il modulo GeoIP 2 che è stato installato nel tuo server HTTP. Questo provider è veloce e accurato, ma %1$s può solo essere utilizzato con il normale tracciamento del browser.%2$s",
         "LocationProviderDesc_ServerModule2": "Se devi importare i file di log o fare qualcos'altro che richiede l'impostazione di indirizzi IP, usa %3$sl'implementazione PHP geoIP 2%4$s e installa %1$sl'estensione maxminddb%2$s.",
+        "NotManagingGeoIPDBs": "Matomo non gestisce attualmente alcun database DBIP o MaxMind.",
         "UnsupportedArchiveType": "Si è incontrato un archivio di tipo non supportato %1$s.",
         "UpdaterHasNotBeenRun": "Il programma di aggiornamento non è mai stato eseguito.",
         "UpdaterIsNotScheduledToRun": "Non è pianificato un suo futuro avvio.",
@@ -42,6 +50,8 @@
         "UpdaterWillRunNext": "È programmato per essere eseguito il %s.",
         "ShowCustomServerVariablesConfig": "Io utilizzo il modulo server GeoIP2 (Nginx, Apache...) e voglio configurare le variabili del server",
         "ServerBasedVariablesConfiguration": "Configurazione per le variabili del server utilizzate dai moduli server di GeoIP 2",
-        "ServerVariableFor": "Variabili del server per %s"
+        "ServerVariableFor": "Variabili del server per %s",
+        "SetupAutomaticUpdatesOfGeoIP": "Imposta gli aggiornamenti automatici dei database di geolocalizzazione",
+        "ThisUrlIsNotAValidGeoIPDB": "Il file scaricato non è un database di geolocalizzazione valido. Verifica di nuovo l'URL o scarica manualmente il file."
     }
 }
