--- a/plugins/UsersManager/lang/it.json
+++ b/plugins/UsersManager/lang/it.json
@@ -12,6 +12,16 @@
         "CreateUser": "Crea utente",
         "SaveBasicInfo": "Salva Info di Base",
         "AllWebsites": "Tutti i siti",
+        "LastUsed": "Ultimo utilizzo",
+        "ExpireDate": "Data di scadenza",
+        "AuthTokens": "Auth tokens",
+        "AuthTokenPurpose": "Per cosa stai usando questo token?",
+        "NoTokenCreatedYetCreateNow": "Non è ancora stato creato un token %1$screa ora un nuovo token%2$s.",
+        "TokenSuccessfullyGenerated": "Token generato con successo",
+        "ConfirmTokenCopied": "Confermo di aver copiato il token.",
+        "GoBackSecurityPage": "Torna alla pagina della sicurezza.",
+        "PleaseStoreToken": "Conserva il token in modo sicuro poiché non sarà possibile accedervi o visualizzarlo di nuovo.",
+        "CreateNewToken": "Crea un nuovo token",
         "AnonymousAccessConfirmation": "Stai per garantire all'utente anonimo l'accesso in 'lettura' a questo sito web. Ciò significa che i tuoi report delle statistiche e le informazioni sui visitatori saranno pubblicamente visibili da tutti anche senza un login. Sei sicuro di voler procedere?",
         "AnonymousUser": "Utente anonimo",
         "AnonymousUserHasViewAccess": "Nota: l'utente %1$s ha un accesso %2$s a questo sito.",
@@ -89,7 +99,14 @@
         "TokenAuth": "Token Autenticazione API",
         "TokenRegenerateConfirmSelf": "Il cambiamento del token di autenticazione API invaliderà il tuo. Se il token attuale è in uso, devi aggiornare tutti i client API con il token generato ex novo. Vuoi veramente cambiare il tuo token di autenticazione?",
         "TokenRegenerateTitle": "Rigenera",
+        "TokensSuccessfullyDeleted": "Tutti i token sono stati cancellati con successo",
+        "TokenSuccessfullyDeleted": "Il token è stato cancellato con successo",
+        "DeleteAllTokens": "Cancella tutti i token",
+        "ExpiredTokensDeleteAutomatically": "I token con una data di scadenza verranno cancellati automaticamente.",
+        "TokensWithExpireDateCreationBySystem": "I token con data di scadenza possono attualmente essere creati solo dal sistema",
+        "TokenAuthIntro": "I token che hai generato possono essere utilizzati per accedere all'API dei report di Matomo, all'API di tracciamento di Matomo e ai widget esportati di Matomo, e hanno le stesse autorizzazioni del tuo normale accesso utente. Puoi utilizzare questi token anche per l'app Matomo Mobile.",
         "TypeYourPasswordAgain": "Scrivi di nuovo la tua nuova password.",
+        "TypeYourCurrentPassword": "Si prega di digitare la password corrente per confermare il cambio password.",
         "User": "Utente",
         "UserHasPermission": "%1$s ha al momento accesso %2$s per %3$s.",
         "UserHasNoPermission": "%1$s ha al momento %2$s a %3$s",
