--- a/plugins/UserCountry/lang/de.json
+++ b/plugins/UserCountry/lang/de.json
@@ -40,6 +40,8 @@
         "SubmenuLocations": "Orte",
         "TestIPLocatorFailed": "Matomo hat die Überprüfung einer bekannten IP-Adresse (%1$s) durchgeführt, aber Ihr Server hat keine Informationen zurückgegeben. Diese Provider ist möglicherweise nicht korrekt konfiguriert (z.B. könnte die Geolocation-Datenbank falsch benannt sein oder im falschen Ordner liegen).",
         "ToGeolocateOldVisits": "Für Standortdaten für vergangene Besuche verwenden Sie bitte das %1$shier beschriebene Skript%2$s.",
-        "WidgetLocation": "Besucherstandort"
+        "WidgetLocation": "Besucherstandort",
+        "GeoIpDbIpAccuracyNote": "Bemerkung: Die DBIP Datenbanken sind frei und können automatisch heruntergeladen werden, aber Geolocation Resultate (insbesondere Städte-Resultate) sind nicht so akkurat wie die von MaxMind. Bei MaxMind hingegen benötigen Sie auch für die freie Geolocation Datenbank ein Benutzerkonto, Sie können den Prozess %1$shier%2$s starten",
+        "MaxMindLinkExplanation": "Wenn Sie die Geolocation Datenbanken von MaxMind verwenden und Sie nicht wissen wie Ihre Download URL zu generieren ist, %1$sklicken Sie hier um zu lernen wie%2$s."
     }
 }
