show page load time in action tooltip and visitor summary instead of generation time

--- a/plugins/PagePerformance/lang/en.json
+++ b/plugins/PagePerformance/lang/en.json
@@ -26,6 +26,7 @@
         "ColumnTimeDomProcessing": "DOM processing time",
         "ColumnTimeDomCompletion": "DOM completion time",
         "ColumnTimeOnLoad": "On load time",
+        "PageLoadTime": "Page load time",
         "EvolutionOverPeriod": "Evolution of page performance metrics",
         "PluginDescription": "Adds some page performance reports",
         "PerformanceTable": "Table with performance metrics",
